Comentar sección de recomendaciones

--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
             </div>
         </section>
 
-        <!-- Recommendations Section  -->
+        <!-- Recommendations Section  
         <section class="recommendations" id="recommendations">
             <h2>Recomendaciones</h2>
             
             <div class="carousel-container">
                 <div class="carousel-track">
-                    <!-- First series of cards -->
+                    First series of cards
                     <div class="recommendation-card">
                         <div class="recommendation-avatar">
                             <i class="fas fa-user"></i>
@@ -313,7 +313,7 @@
                         </div>
                     </div>
 
-                    <!-- Second set of cards (duplicated for the infinity effect) -->
+                    Second set of cards (duplicated for the infinity effect)
                     <div class="recommendation-card">
                         <div class="recommendation-avatar">
                             <i class="fas fa-user"></i>
@@ -392,7 +392,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- Footer -->
