Cambios en la sección de proyectos destacados

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="projects-grid">
 
                     <div class="project-card">
-                        <div class="project-image2"></div>
+                        <div class="project-image1"></div>
                         <div class="project-content">
                             <h3>LaLiga Fantasy Generator</h3>
                             <div class="tech-tags">
@@ -180,15 +180,16 @@
                     </div>
 
                     <div class="project-card">
-                        <div class="project-image1"></div>
+                        <div class="project-image2"></div>
                         <div class="project-content">
-                            <h3>Blank Urban Web</h3>
+                            <h3>Pokédex App</h3>
                             <div class="tech-tags">
-                                <span class="tech-tag">HTML</span>
-                                <span class="tech-tag">CSS</span>
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">TypeScript</span>
+                                <span class="tech-tag">PokéAPI</span>
                             </div>
-                            <p>Página web estática que combina diseño minimalista, estructura organizada y recursos multimedia para representar la identidad de la marca Blank Urban.</p>
-                            <a href="https://github.com/gabiisnchez/Blank-Urban-Web" class="btn-project" target="_blank">
+                            <p>Una Pokédex moderna e interactiva que te permite explorar el vasto mundo Pokémon como nunca antes. Busca fácilmente tus Pokémon favoritos, habilidades, evoluciones y mucho más.</p>
+                            <a href="https://github.com/gabiisnchez/Pokedex-App" class="btn-project" target="_blank">
                                 Ver en GitHub <i class="fab fa-github"></i>
                             </a>
                         </div>
