--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header class="header">
 
         <!-- User icon -->
-        <div class="icon"><i class="fas fa-user"></i></div>
+        <div class="icon">
+            <img src="SOURCES/IMAGES/imagen_CV.png" alt="Gabriel Sanchez">
+        </div>
 
         <div class="header-container">
             
@@ -54,7 +56,7 @@
                     <p>Estudiante de Desarrollo de Aplicaciones Multiplataforma. Apasionado por crear soluciones innovadoras y experiencias digitales excepcionales que garanticen la calidad del software a través del testing y QA.</p>
                 </div>
                 <div class="hero-image">
-                    <img src="https://via.placeholder.com/350x350/4CAF50/FFFFFF?text=Foto" alt="Gabriel Sanchez" class="profile-img">
+                    <img src="SOURCES/IMAGES/imagen_CV.png" alt="Gabriel Sanchez" class="profile-img">
                 </div>
             </div>
             <div class="scroll-indicator" onclick="scrollToNext()">
@@ -149,7 +151,7 @@
                 </div>
 
                 <div class="download-cv">
-                    <a href="SOURCES/CV/CV - Gabriel Sánchez Heredia (Octubre 2025).pdf" target="_blank" class="btn-cv">
+                    <a href="SOURCES/CV/CV - Gabriel Sánchez Heredia (Noviembre 2025).pdf" target="_blank" class="btn-cv">
                         <i class="fas fa-download"></i> Descargar CV
                     </a>
                 </div>
