--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -14,7 +14,9 @@
     <header class="header">
 
         <!-- User icon -->
-        <div class="icon"><i class="fas fa-user"></i></div>
+        <div class="icon">
+            <img src="SOURCES/IMAGES/imagen_CV.png" alt="Gabriel Sanchez">
+        </div>
 
         <div class="header-container">
             
