Actualizar ruta de imagenes

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -15,7 +15,7 @@
 
         <!-- User icon -->
         <div class="icon">
-            <img src="SOURCES/IMAGES/imagen_CV.png" alt="Gabriel Sanchez">
+            <img src="../SOURCES/IMAGES/imagen_CV.png" alt="Gabriel Sanchez">
         </div>
 
         <div class="header-container">
